# template_cpp_project

./: .gitignore  CMakeLists.txt  EmptyLibrary.cpp  EmptyLibrary.hpp  LICENSE  README.md  current_version.hpp.cmake_gen  main.cpp  test_entrypoint.cpp
.github/workflows/: release.yml
